<resources>
    <string name="app_name">Bangkit_Capstone</string>
    <string name="login">Masuk</string>
    <string name="regist">Daftar</string>
    <string name="forgot_password">Lupa password?</string>
    <string name="no_have_an_account">Belum punya akun?</string>
    <string name="have_an_account">Sudah punya akun?</string>

    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Konfirmasi Password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Beranda</string>
    <string name="title_search_location">Cari Lokasi</string>
    <string name="title_account">Akun</string>

    <string name="profile_account">Profil Akun</string>
    <string name="edit_profile">Edit profile</string>
    <string name="validate_umkm">Validasi UMKM</string>
    <string name="logout">Keluar</string>

    <string name="delete_account">Hapus Akun</string>
    <string name="save">Simpan</string>

    <string name="back">Kembali</string>

    <string name="what_is_your_business_name">Apa nama bisnis anda?</string>
    <string name="what_area_of_business_are_you_starting">Apa bidang bisnis yang sedang Anda rintis?</string>
    <string name="who_is_your_target_market">Siapa target pasar Anda?</string>
    <string name="physical_location_for_your_MSME_business">
        Apakah anda sudah memiliki lokasi fisik untuk bisnis UMKM Anda? Jika iya, di mana lokasi bisnis Anda berada?
    </string>

    <string name="validate">Validasi</string>
</resources>