<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitef"
    tools:context=".ui.validateUmkm.ValidateUmkmActivity">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/frame_layout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/TextContent.HeadlineLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/validate_umkm" />

        <TextView
            android:layout_marginTop="16dp"
            style="@style/TextContent.BodyMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/what_is_your_business_name" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_business_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/TextContent.BodyMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:text="@string/what_area_of_business_are_you_starting" />

        <Spinner
            android:id="@+id/industry"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/TextContent.BodyMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/who_is_your_target_market" />

        <Spinner
            android:id="@+id/target_market"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/TextContent.BodyMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/physical_location_for_your_MSME_business" />

        <Spinner
            android:id="@+id/city"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/district"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="190dp"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/urbanVillage"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="190dp"
                android:autofillHints="creditCardExpirationDate"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_validation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/validate"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>